2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	loopn|foreach -> for.
	* src/parser/bison/ugrammar.y ("loopn", "foreach"): Remove,
	use "for" instead.
	* src/parser/bison/utoken.l (DEPRECATED): New.
	Use it for ^, foreach and loopn.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	<< for tags.
	This patch is a rough implementation of << for channels.
	It actually makes << and : both usable for both tags and
	channels.  If someone wants to improve this, go ahead.
	* src/parser/bison/ugrammar.y (<<, >>): New tokens.
	(YYSTYPE::is_colon, colon_or_ltlt): New.
	* src/parser/bison/utoken.l (<<, >>): New tokens.
	Fix the catch-all rule to be active for all the start conditions
	(fixes a Flex warning).

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Fix the operator precedence.
	* src/parser/bison/ugrammar.y: Import from k2 (but add "**" support).
	This was supposed to be done by Quentin Hocquet.

2007-10-18  Akim Demaille  <akim@lrde.epita.fr>

	Move TagInfo stuff into tag-info.*.
	* src/ucommand.hh, src/ucommand.cc (initializeTagInfos)
	(systemTagInfo, notagTagInfo): Move to...
	* include/kernel/tag-info.hh, src/tag-info.cc: here.
	* src/userver.cc: Adjust.

2007-10-18  Akim Demaille  <akim@lrde.epita.fr>

	foreach, factor.
	* src/uconnection.cc: Use BOOST_FOREACH.
	(removeMonitor): New, to factor two uses.
	Simplify if () { return } else { body } into if () { return }
	body.
	Remove useless parens.

2007-10-18  Akim Demaille  <akim@lrde.epita.fr>

	foreach.
	* src/userver.cc: use it.

2007-10-16  Akim Demaille  <demaille@gostai.com>

	BOOST_FOREACH IS COOL.
	* src/uconnection.cc, src/uobject.cc, src/userver.cc,
	* src/uvariable.cc: Use it.

2007-10-16  Akim Demaille  <demaille@gostai.com>

	Restore subscription to uobject.

2007-10-15  Akim Demaille  <demaille@gostai.com>

	Update tests, fix failure.
	* src/parser/bison/ugrammar.y: static applies to lvalues,
	as per variable-qualifiers.chk.
	* tests-local.mk: Update.
