@@ -1,5 +1,10 @@
 2007-10-19  Akim Demaille  <akim@lrde.epita.fr>
 
+	Support seq(n).
+	* src/uexpression.cc (UExpression::eval_FUNCTION_1): Do it.
+
+2007-10-19  Akim Demaille  <akim@lrde.epita.fr>
+
 	loopn|foreach -> for.
 	* src/parser/bison/ugrammar.y ("loopn", "foreach"): Remove,
 	use "for" instead.
